k8s/student-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-service
  labels:
    app: student-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: student-service
  template:
    metadata:
      labels:
        app: student-service
    spec:
      containers:
        - name: student-service
          image: ghcr.io/saipappala/student-service:latest
          ports:
            - containerPort: 8081
