k8s/studylog-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: studylog-service
  labels:
    app: studylog-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: studylog-service
  template:
    metadata:
      labels:
        app: studylog-service
    spec:
      containers:
        - name: studylog-service
          image: ghcr.io/saipappala/studylog-service:latest
          ports:
            - containerPort: 8082
