k8s/backend-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-service
spec:
  type: ClusterIP
  selector:
    app: student-service
  ports:
    - port: 8081
      targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: studylog-service
spec:
  type: ClusterIP
  selector:
    app: studylog-service
  ports:
    - port: 8082
      targetPort: 8082
