k8s/test.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"service.beta.kubernetes.io/oci-load-balancer-internal":"false","service.beta.kubernetes.io/oci-load-balancer-shape":"flexible","service.beta.kubernetes.io/oci-load-balancer-shape-flex-max":"10","service.beta.kubernetes.io/oci-load-balancer-shape-flex-min":"10","service.beta.kubernetes.io/oci-load-balancer-subnet1":"ocid1.subnet.oc1.ap-hyderabad-1.aaaaaaaa4l6xji4r63c25q5to5etld7eghhqsrcorw5j5y5hfpwuuurtgh2q"},"name":"web-app-lo [...]
    service.beta.kubernetes.io/oci-load-balancer-internal: "false"
    service.beta.kubernetes.io/oci-load-balancer-shape: flexible
    service.beta.kubernetes.io/oci-load-balancer-shape-flex-max: "10"
    service.beta.kubernetes.io/oci-load-balancer-shape-flex-min: "10"
    service.beta.kubernetes.io/oci-load-balancer-subnet1: ocid1.subnet.oc1.ap-hyderabad-1.aaaaaaaa4l6xji4r63c25q5to5etld7eghhqsrcorw5j5y5hfpwuuurtgh2q
  creationTimestamp: "2026-09-08T13:01:54Z"
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  name: web-app-loadbalancer
  namespace: default
  resourceVersion: "4162672"
  uid: f1069a97-3f32-432b-8db9-2b5e7e110ddb
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.96.236.50
  clusterIPs:
  - 10.96.236.50
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    nodePort: 32243
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: ingress-nginx
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 129.225.119.116
      ipMode: VIP
