k8s/web-app-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-loadbalancer
  namespace: ingress-nginx   # <--- Must match the controller pod namespace
  annotations:
    service.beta.kubernetes.io/oci-load-balancer-internal: "false"
    service.beta.kubernetes.io/oci-load-balancer-shape: "flexible"
    service.beta.kubernetes.io/oci-load-balancer-shape-flex-min: "10"
    service.beta.kubernetes.io/oci-load-balancer-shape-flex-max: "10"
    service.beta.kubernetes.io/oci-load-balancer-subnet1: "ocid1.subnet.oc1.ap-hyderabad-1.aaaaaaaa4l6xji4r63c25q5to5etld7eghhqsrcorw5j5y5hfpwuuurtgh2q"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
